--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -43,8 +43,9 @@
             <add-to-group group-id="ToolsMenu" anchor="first"/>
         </action>
 
-        <action id="io.startProjectClient" class="com.io.gui.StartIoClient" text="Start Project Io As Client">
+        <action id="io.startProjectClient" class="com.io.gui.StartIoClient" text="Start Project Io As Client" icon="/icons/io.png">
             <add-to-group group-id="ToolsMenu" anchor="first" />
+            <add-to-group group-id="WelcomeScreen.QuickStart" anchor="last"/>
         </action>
     </actions>
 
